# TTX

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  TTX.sln  TTX.slnx  compose.yaml  mise.toml  nuget.config
.forgejo/workflows/: docker-publish-api.yml  docker-publish-jobs.yml  docker-publish-private.yml  docker-publish-web.yml  dotnet.yml  rust.yml
.github/workflows/: docker-publish-api.yml  docker-publish-jobs.yml  docker-publish-monitor.yml  docker-publish-portfolio-monitor.yml  docker-publish-private.yml  docker-publish-stream-monitor.yml  docker-publish-ttx.yml  docker-publish-value-monitor.yml  docker-publish-web.yml  dotnet.yml
Deployment/: deployment.yaml  ingress.yaml  pvc.yaml  scalers.yaml  scalers.yml  secrets.yaml  services.yaml
docs/: caching.md
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  api.yaml  hpa.yaml  ingress.yaml  jobs.yaml  pvc.yaml  redis.yaml  secret.yaml  web.yaml
src/Api/: Dockerfile  Program.cs  README.md  TTX.Interface.Api.csproj  TTX.Interface.Api.http
src/Api/Controllers/: CreatorsController.cs  SessionsController.cs  UsersController.cs
src/Api/Dto/: CreatorDto.cs  CreatorRarityDto.cs  LootBoxDto.cs  LootBoxResultDto.cs  StreamStatusDto.cs  UserDto.cs  UserTransactionDto.cs
src/Api/Properties/: launchSettings.json
src/Api/Services/: SessionService.cs
src/Core/: README.md  TTX.Core.csproj  nuget.config
src/Core/Exceptions/: AuthenticationRequiredException.cs  CreatorNotFoundException.cs  DiscordUserNotFoundException.cs  DomainException.cs  ExceedsBalanceException.cs  ExceedsSharesException.cs  LootBoxOpened.cs  MaxSharesException.cs  ModelValidationException.cs  NoLootBoxesException.cs  (+4 more)
src/Data/: ApplicationDbContext.cs  TTX.Infrastructure.Data.csproj
src/Discord/: TTX.Infrastructure.Discord.csproj
src/StreamMonitor/: .env.example  Program.cs  TTX.Interface.StreamMonitor.csproj
src/TTX/: .editorconfig  AssemblyReference.cs  README.md  TTX.csproj
src/TTX.Api/: .env.example  DependencyInjection.cs  Dockerfile  Program.cs  README.md  TTX.Api.csproj  TTX.Api.http  WeatherForecast.cs  appsettings.Development.json  appsettings.json  nuget.config
src/TTX.App/: DependencyInjection.cs  README.md  TTX.App.csproj
src/TTX.Domain/: README.md
src/TTX.Infrastructure/: DependencyInjection.cs  README.md  TTX.Infrastructure.csproj
src/TTX.Jobs/: Dockerfile  Program.cs  README.md  TTX.Jobs.csproj  appsettings.Development.json  appsettings.json
src/TTX.PortfolioMonitor/: .env.example  Dockerfile  LICENSE  Program.cs  README.md  TTX.PortfolioMonitor.csproj  docker-compose.yaml
src/TTX.StreamMonitor/: .env.example  Dockerfile  Program.cs  README.md  TTX.StreamMonitor.csproj
src/TTX.ValueMonitor/: .env.example  Dockerfile  Program.cs  README.md  TTX.ValueMonitor.csproj  nuget.config
src/TTX.Web/: .env.example  Dockerfile  README.md  client.ts  deno.json  main.ts  mise.toml  ttx.nswag
src/Twitch/: TTX.Infrastructure.Twitch.csproj
src/Web/: package-lock.json  package.json  ttx.nswag
src/api/: .env.example  Cargo.toml  Dockerfile
src/api/src/: auth.rs  config.rs  error.rs  events.rs  main.rs  routes.rs  seed.rs  server.rs  state.rs
src/api/src/routes/: creators.rs  players.rs  sessions.rs  transactions.rs  ws.rs
src/api/src/seed/: creators.json  players.json
src/jobs/: .env.example  Cargo.toml  Dockerfile
src/jobs/src/: config.rs  context.rs  deps.rs  lib.rs  main.rs  runners.rs
src/ttx/: Cargo.toml
src/ttx/benches/: domain.rs
src/ttx/migrations/: 0000_ef_migration.sql  0001_init.sql  0002_performance_indexes.sql
src/ttx/src/: cache.rs  creators.rs  data.rs  di.rs  dto.rs  error.rs  events.rs  factories.rs  jobs.rs  lib.rs  lootboxes.rs  options.rs  platforms.rs  players.rs  primitives.rs  shares.rs  telemetry.rs  transactions.rs  users.rs  validators.rs
src/ttx/src/cache/: lock.rs  redis.rs
src/ttx/src/creators/: applications.rs  data.rs  dto.rs  events.rs  model.rs  opt_outs.rs
src/ttx/src/creators/applications/: data.rs  dto.rs  events.rs  model.rs
src/ttx/src/creators/opt_outs/: data.rs  dto.rs  model.rs
src/ttx/src/data/: portfolio.rs
src/ttx/src/dto/: pagination.rs  portfolio.rs
src/ttx/src/events/: postgres.rs  redis.rs
src/ttx/src/jobs/: backends.rs  chat.rs  portfolios.rs  streams.rs
src/ttx/src/jobs/chat/: twitch.rs
src/ttx/src/jobs/streams/: twitch.rs
src/ttx/src/lootboxes/: data.rs  dto.rs  events.rs  model.rs
src/ttx/src/players/: data.rs  dto.rs  events.rs  model.rs
src/ttx/src/transactions/: data.rs  dto.rs  events.rs  model.rs
src/ttx/tests/: domain.rs  dto_serialization.rs  repository.rs
src/web/: .dockerignore  Dockerfile  README.md  client.ts  deno.json  main.ts  ttx.nswag  utils.ts
tests/TTX.Core/: TTX.Tests.Core.csproj  Test1.cs
tests/TTX.Tests/: .env.example  ApplicationTests.cs  TTX.Tests.csproj  docker-compose.yaml
tests/TTX.Tests.App/: DependencyInjection.cs  README.md  ServiceTests.cs  TTX.Tests.App.csproj  appsettings.json  compose.yaml
(+829 files in other folders)
