[workspace]
resolver = "3"
members = ["src/ttx", "src/api", "src/jobs"]
# `src/private` (closed-source overrides) is a separate, optional crate built by
# its own pipeline. Excluded so the public workspace builds without it present.
exclude = ["src/private"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Single source of truth for dependency versions across all crates. Members
# inherit with `<dep>.workspace = true` and add crate-specific features inline.
[workspace.dependencies]
ttx = { path = "src/ttx" }

async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws", "macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
criterion = "0.8.2"
dotenvy = "0.15.7"
futures-util = "0.3.32"
# jsonwebtoken 10 requires an explicit crypto provider; use aws-lc-rs to match
# the rustls backend already pulled in by sqlx/reqwest/twitch-irc.
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs"] }
moka = { version = "0.12.15", features = ["future"] }
# OpenTelemetry: distributed tracing exported over OTLP/HTTP. Uses reqwest with
# rustls (backed by aws-lc-rs, matching the jsonwebtoken provider) so no OpenSSL
# is pulled in. The four crates are version-locked to one another, so bump them
# together.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.32"
rand = "0.10.1"
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
