[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ttx.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui.workspace = true
