[package]
name = "jobs"
version.workspace = true
edition.workspace = true

[features]
private = ["dep:private"]

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
private = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ttx.workspace = true
