[package]
name = "jobs"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ttx.workspace = true
